--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - images/chickenramen.jpg
+    - images/cubes.jpg
 
   fonts:
     - family: Pacifico
